feat(crm): 添加CRM客户管理和营销功能模块
- 修改数据库连接地址从远程服务器改为本地
- 新增活动和优惠券API接口文件，支持营销活动管理
- 创建CRM客户实体类，包含会员基本信息、等级、积分、余额等字段
- 实现客户管理服务层，提供客户增删改查、充值消费、积分管理等功能
- 添加登录页面组件，实现用户认证界面
- 集成Spring Security权限控制，实现JWT认证和权限拦截
- 新增系统用户控制器，提供完整的用户登录登出和管理功能
- 配置MyBatis Plus分页插件和数据访问层